tests/baselines/reference/symbolProperty40(strict=true).errors.txt
symbolProperty40.ts(2,5): error TS2394: This overload signature is not compatible with its implementation signature.


==== symbolProperty40.ts (1 errors) ====
    class C {
        [Symbol.iterator](x: string): string;
        ~~~~~~~~~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 symbolProperty40.ts:4:5: The implementation signature is declared here.
        [Symbol.iterator](x: number): number;
        [Symbol.iterator](x: any) {
            return undefined;
        }
    }
    
    var c = new C;
    c[Symbol.iterator]("");
    c[Symbol.iterator](0);
    